--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,9 +10,11 @@ body {
 }
 
 *,
-*::before,
-*::after {
-  box-sizing: inherit;
+::before,
+::after {
+  border-width: 0;
+  border-style: solid;
+  border-color: theme('borderColor.DEFAULT', currentColor);
 }
 
 * {
@@ -27,9 +29,10 @@ a {
 }
 
 ul,
-ol,
-li {
-  list-style-type: none;
+ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 button {
@@ -55,4 +58,16 @@ menu,
 nav,
 section {
   display: block;
+}
+
+img,
+svg,
+video,
+canvas,
+audio,
+iframe,
+embed,
+object {
+  display: block;
+  vertical-align: middle;
 }
